@@ -36,6 +36,7 @@ Unreleased Version 2.2.0-pre
  * Feature: Allow choosing ffmpeg path on Windows. Thanks xxxx for suggesting.
  * Fix: Move brushes to the proper place in MediBang-esque layout. Thanks xxxx for reporting.
  * Fix: Replace the reset notice dialog with less disruptive on-canvas messages. If you continue drawing, the notice about saving the previous state will dismiss itself. Thanks to Blozzom, vipperz, xxxx, zheida and probably others for reporting.
+ * Feature: Allow the client to translate server messages, rather than having them always be in English.
 
 2023-08-26 Version 2.2.0-beta.7
  * Fix: Make classic brushes not go brighter when smudging into transparency. Thanks to cada for reporting.
